@@ -218,5 +218,17 @@ Glib::ustring UsesRelationship::get_sql_join_alias_name() const
   return result;
 }
 
+Glib::ustring UsesRelationship::get_relationship_display_name() const
+{
+  Glib::ustring result;
+  
+  if(get_has_relationship_name())
+    result = get_relationship_name();
+
+  if(get_has_related_relationship_name())
+    result += ("::" + get_related_relationship_name());
+  
+  return result;
+}
 
 } //namespace Glom
